--- a/ToeTacTic/app/src/main/res/layout/activity_game.xml
+++ b/ToeTacTic/app/src/main/res/layout/activity_game.xml
@@ -7,6 +7,29 @@
     tools:context=".GameActivity">
 
 
+    <TextView
+        android:id="@+id/player1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="Hello"
+        android:textSize="35dp"/>
+
+
+    <TextView
+        android:id="@+id/player2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="right"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Hello"
+        android:textSize="35dp"/>
+
+
+
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
