--- a/ToeTacTic/app/src/main/res/layout/activity_main.xml
+++ b/ToeTacTic/app/src/main/res/layout/activity_main.xml
@@ -31,17 +31,41 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         android:paddingTop="15dp"/>
 
+    <EditText
+        android:id="@+id/username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:paddingTop="110dp"
+        android:gravity="center"
+        android:hint="Username"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
     <Button
         android:id="@+id/startGameButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="10dp"
         android:text="@string/start"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
+        app:layout_constraintTop_toBottomOf="@+id/username"
         app:layout_constraintWidth_percent="0.75"
         android:backgroundTint="#2C2C2E" />
+
+    <EditText
+        android:id="@+id/joinToken"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        app:layout_constraintTop_toBottomOf="@id/startGameButton"
+        android:paddingTop="30dp"
+        android:gravity="center"
+        android:hint="Game Token"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <Button
         android:id="@+id/joinGameButton"
@@ -51,7 +75,7 @@
         android:text="@string/join"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startGameButton"
+        app:layout_constraintTop_toBottomOf="@+id/joinToken"
         app:layout_constraintWidth_percent="0.75"
         android:backgroundTint="#2C2C2E"/>
 
